Version 2.2.1
---------------------------------------------------------------------------
11 December 2008
+ Fixed document smarttag

Version 2.2.0
---------------------------------------------------------------------------------
7 November 2008
+ Folder item view watches title length and abbreviates when
  necessary. 
+ Added style component to item title in folder view.
+ Style added to reduce font size for item title.
+ Added setting to force thumbnail dimensions on all previously saved
  thumbnails.
+ Added getTitle function to File_Common with size reduction option.

5 November 2008
+ Checking for image existence prior to display in file manager.
+ Patch #2067859 - titles added to pinned folders. Thanks Tommy.

27 October 2008
+ File Cabinet permissions not required to pick items from menu.
+ File manager windows verify salted authkeys.
+ File manager allows dev to designate a reserved folder. Users will
  be able to access that folder only.
+ Developer can force an upload width and height. Images will be
  resized to those dimensions before saving them.
+ Fixed force resize option.
+ Updated: 
  javascript/clear_file/body.js, default.php, head.js
  javascript/update_file/head.js, default.php

8 October 2008
+ Made File_Assoc::parentLinked function a little more robust.

7 October 2008
+ Fixed pain in the butt carousel display problem.

1 October 2008
+ Fixed multimedia popup
+ Added faster classify options
+ Updated: templates/classify_list.tpl

17 September 2008
+ Added commercial use message to readme for media player
+ Error check added to parse function.
+ Rewrote clip code for new clipboard functionality.

8 September 2008
+ Trying alternate clipboard option.
+ Classify looks in media types prior to documents now.
+ Different javascript link format in clear_file.
+ Updated: javascript/clear_file/body.js

13 August 2008
+ Downloaded documents now increment download count.
+ Document folder view shows how many times a document has been
  downloaded.