@@ -370,7 +370,7 @@ class Folder {
 
     public function delete()
     {
-        if ($this->ftype = IMAGE_FOLDER) {
+        if ($this->ftype == IMAGE_FOLDER) {
             $table = 'images';
         } elseif ($this->ftype == DOCUMENT_FOLDER) {
             $table = 'documents';
