@@ -65,7 +65,7 @@ class FC_Image_Manager {
 
         case 'clip_image':
             if ($this->image->id) {
-                Clipboard::copy($this->image->title, $this->image->getTag(), true,
+                Clipboard::copy($this->image->title, $this->image->getTag(null,false,true), true,
                                 sprintf('[filecabinet:image:%s]', $this->image->id));
             }
             PHPWS_Core::goBack();
